--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,14 @@ spring.datasource.username=postgres
 spring.datasource.password=Rithick@502
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# Hibernate settings
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+# Logging
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
+# Enable JPA repository scanning
+spring.data.jpa.repositories.enabled=true
