--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -14,4 +14,5 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # Enable JPA repository scanning
 spring.data.jpa.repositories.enabled=true
+server.port=8081
 
