--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/employee_details
+spring.datasource.url=jdbc:postgresql://192.168.1.12:5432/employee_details
 spring.datasource.username=postgres
 spring.datasource.password=Rithick@502
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -15,4 +15,3 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # Enable JPA repository scanning
 spring.data.jpa.repositories.enabled=true
 server.port=8081
-
