deployed in aws

--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://192.168.1.12:5432/employee_details
+spring.datasource.url=jdbc:postgresql://employee-details.cvayo6i8ic9f.ap-southeast-2.rds.amazonaws.com:5432/employee_details
 spring.datasource.username=postgres
-spring.datasource.password=Rithick@502
+spring.datasource.password=rithickrithu
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate settings
